# humanoid_robot_utility-release

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  patches.conf  tracks.yaml
.github/workflows/: codeql.yml
humanoid_robot_math/: package.xml
humanoid_robot_math/include/humanoid_robot_math/: bezier_curve.h  humanoid_robot_linear_algebra.h  humanoid_robot_math_base.h  humanoid_robot_trajectory_calculator.h  minimum_jerk_trajectory.h  minimum_jerk_trajectory_with_via_point.h  simple_trapezoidal_velocity_profile.h
humanoid_robot_math/src/: humanoid_robot_linear_algebra.cpp  minimum_jerk_trajectory.cpp  preview_control.cpp  step_data_define.cpp
humanoid_robot_utility/: package.xml
include/humanoid_robot_math/: fifth_order_polynomial_trajectory.h  humanoid_robot_math.h  preview_control.h  step_data_define.h
include/ros_madplay_player/: ros_madplay_player.h
ros_madplay_player/: package.xml
src/: bezier_curve.cpp  fifth_order_polynomial_trajectory.cpp  humanoid_robot_math_base.cpp  humanoid_robot_trajectory_calculator.cpp  minimum_jerk_trajectory_with_via_point.cpp  ros_madplay_player.cpp  simple_trapezoidal_velocity_profile.cpp
